@@ -1,38 +1,43 @@
 package es.udc.fi.dc.fd.rest.controllers;
 
-import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toAuthenticatedUserDto;
-import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toUser;
-import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toUserDto;
-import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toBlockUserDto;
-import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toBlockResumeUserDto;
-
 import java.net.URI;
-import java.util.Collections;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestAttribute;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import es.udc.fi.dc.fd.model.common.exceptions.DuplicateInstanceException;
 import es.udc.fi.dc.fd.model.common.exceptions.InstanceNotFoundException;
 import es.udc.fi.dc.fd.model.entities.BlockUser;
 import es.udc.fi.dc.fd.model.entities.Users;
+import es.udc.fi.dc.fd.model.entities.Users.Gender;
+import es.udc.fi.dc.fd.model.services.UserService;
 import es.udc.fi.dc.fd.model.services.exceptions.AlreadyBlockException;
 import es.udc.fi.dc.fd.model.services.exceptions.IncorrectLoginException;
 import es.udc.fi.dc.fd.model.services.exceptions.IncorrectPasswordException;
 import es.udc.fi.dc.fd.model.services.exceptions.LoginUserBlockedException;
 import es.udc.fi.dc.fd.model.services.exceptions.PermissionException;
 import es.udc.fi.dc.fd.model.services.exceptions.SelfBlockException;
-import es.udc.fi.dc.fd.model.services.UserService;
 import es.udc.fi.dc.fd.rest.common.ErrorsDto;
 import es.udc.fi.dc.fd.rest.common.JwtGenerator;
 import es.udc.fi.dc.fd.rest.common.JwtInfo;
@@ -40,13 +45,17 @@ import es.udc.fi.dc.fd.rest.dtos.AuthenticatedUserDto;
 import es.udc.fi.dc.fd.rest.dtos.BlockDto;
 import es.udc.fi.dc.fd.rest.dtos.BlockedByUserDto;
 import es.udc.fi.dc.fd.rest.dtos.ChangePasswordParamsDto;
+import es.udc.fi.dc.fd.rest.dtos.FollowRequestConversor;
+import es.udc.fi.dc.fd.rest.dtos.FollowRequestDto;
 import es.udc.fi.dc.fd.rest.dtos.LoginParamsDto;
 import es.udc.fi.dc.fd.rest.dtos.ResumeUserDto;
+import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toAuthenticatedUserDto;
+import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toBlockResumeUserDto;
+import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toBlockUserDto;
+import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toUser;
+import static es.udc.fi.dc.fd.rest.dtos.UserConversor.toUserDto;
 import es.udc.fi.dc.fd.rest.dtos.UserDto;
 import es.udc.fi.dc.fd.rest.dtos.UserRegisterParamsDto;
-
-
-
 
 
 /**
@@ -93,7 +102,6 @@ public class UserController {
 	 */
 	@ExceptionHandler(IncorrectLoginException.class)
 	@ResponseStatus(HttpStatus.NOT_FOUND)
-	@ResponseBody
 	public ErrorsDto handleIncorrectLoginException(IncorrectLoginException exception, Locale locale) {
 
 		String errorMessage = messageSource.getMessage(INCORRECT_LOGIN_EXCEPTION_CODE, null,
@@ -105,7 +113,6 @@ public class UserController {
 
 	@ExceptionHandler(LoginUserBlockedException.class)
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
-	@ResponseBody
 	public ErrorsDto handleLoginUserBlockedException(LoginUserBlockedException exception, Locale locale){
 
 		String errorMessage = messageSource.getMessage(LOGIN_BLOCK_EXCEPTION, null,
@@ -124,7 +131,6 @@ public class UserController {
 	 */
 	@ExceptionHandler(IncorrectPasswordException.class)
 	@ResponseStatus(HttpStatus.NOT_FOUND)
-	@ResponseBody
 	public ErrorsDto handleIncorrectPasswordException(IncorrectPasswordException exception, Locale locale) {
 
 		String errorMessage = messageSource.getMessage(INCORRECT_PASS_EXCEPTION_CODE, null,
@@ -143,7 +149,6 @@ public class UserController {
 	 */
 	@ExceptionHandler(AlreadyBlockException.class)
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
-	@ResponseBody
 	public ErrorsDto handleAlreadyStartedException(AlreadyBlockException exception, Locale locale){
 		String errorMessage = messageSource.getMessage(ALREADY_BLOCKED_EXCEPTION, null,
 				ALREADY_BLOCKED_EXCEPTION, locale);
@@ -161,12 +166,25 @@ public class UserController {
 	 */
 	@ExceptionHandler(SelfBlockException.class)
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
-	@ResponseBody
 	public ErrorsDto handleSelfBlockException(SelfBlockException exception, Locale locale){
 		String errorMessage = messageSource.getMessage(SELF_BLOCKED_EXCEPTION, null,
 		SELF_BLOCKED_EXCEPTION, locale);
 
 		return new ErrorsDto(errorMessage);
+	}
+
+	private Gender parseGender(String genderStr) {
+		if (genderStr == null) {
+			return null; // or throw an exception
+		}
+		switch (genderStr.toUpperCase()) {
+			case "MALE":
+				return Gender.MALE;
+			case "FEMALE":
+				return Gender.FEMALE;
+			default:
+				return Gender.OTHER;
+		}
 	}
 
 	/**
@@ -175,16 +193,16 @@ public class UserController {
 	 * @param userDto the user dto
 	 * @return the response entity
 	 * @throws DuplicateInstanceException the duplicate instance exception
+	 * @throws InstanceNotFoundException 
 	 */
 	@PostMapping("/signUp")
 	public ResponseEntity<AuthenticatedUserDto> signUp(
 			@Validated({ UserDto.AllValidations.class }) @RequestBody UserRegisterParamsDto userDto)
-			throws DuplicateInstanceException {
+			throws DuplicateInstanceException, InstanceNotFoundException {
 
 		Users user = toUser(userDto);
 		Users.RoleType role = userDto.getRole() != null && userDto.getRole().equals("TRAINER") ? Users.RoleType.TRAINER : Users.RoleType.USER;
-		Users.Gender gender = userDto.getGender() != null && userDto.getGender().equals("MALE") ? Users.Gender.MALE :
-			userDto.getGender() != null && userDto.getGender().equals("FEMALE") ? Users.Gender.FEMALE : Users.Gender.OTHER;
+		Users.Gender gender = parseGender(userDto.getGender());
 		user.setGender(gender);
 		if (userDto.getBirthDate() != null && !userDto.getBirthDate().isEmpty()) {
 			user.setBirthDate(toLocalDate(userDto.getBirthDate()));
@@ -289,7 +307,7 @@ public class UserController {
 	}
 
 	@GetMapping("/{id}")
-	public UserDto getUser(@RequestAttribute Long userId, @PathVariable Long id) throws InstanceNotFoundException, PermissionException {
+	public UserDto getUser(@RequestAttribute Long userId, @PathVariable Long id) throws InstanceNotFoundException {
 		return toUserDto(userService.getUserById(userId));
 	}
 
@@ -343,7 +361,7 @@ public class UserController {
 									.orElse(Collections.emptyList())
 									.stream()
 									.map(Users::getId)
-									.collect(Collectors.toList());
+									.toList();
 	}
 	
 	@GetMapping("/following/count")
@@ -354,6 +372,24 @@ public class UserController {
 	@GetMapping("/getGenders")
 	public List<String> getGenders() {
 		return userService.getGenders();
+	}
+
+	@PostMapping("/sendFollowRequest/{receiverId}")
+	public FollowRequestDto sendFollowRequest(@RequestAttribute Long userId, @PathVariable Long receiverId) throws PermissionException, InstanceNotFoundException {
+		return FollowRequestConversor.toFollowRequestDto(userService.sendFollowRequest(userId,receiverId));
+	}
+
+	@PostMapping("/acceptFollowRequest/{id}")
+	public boolean acceptFollowRequest(@PathVariable long id) throws PermissionException, InstanceNotFoundException {
+		return userService.acceptFollowRequest(id);
+	}
+	@DeleteMapping("/rejectFollowRequest/{id}")
+	public void rejectFollowRequest(@PathVariable long id) throws InstanceNotFoundException {
+		userService.rejectFollowRequest(id);
+	}
+	@GetMapping("/FollowRequest")
+	public List<FollowRequestDto> getFollowRequest(@RequestAttribute Long userId) throws InstanceNotFoundException {
+		return FollowRequestConversor.toFollowRequestDtos(userService.getFollowRequests(userId));
 	}
 
 
