@@ -1,12 +1,8 @@
 package es.udc.fi.dc.fd.rest.dtos;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import es.udc.fi.dc.fd.model.entities.Exercise;
 import es.udc.fi.dc.fd.model.entities.Routine;
-import es.udc.fi.dc.fd.model.entities.RoutineExercise;
 import es.udc.fi.dc.fd.model.entities.RoutineFollowDao;
 import es.udc.fi.dc.fd.model.entities.Training;
 
@@ -15,7 +11,7 @@ public class RoutineConversor {
 
     // Método adaptado al nuevo modelo con RoutineExercise
     public static RoutineDto toRoutineDto(Routine routine) {
-        RoutineDto routineDto = new RoutineDto(
+        return new RoutineDto(
             routine.getId(), 
             routine.getName(),
             // Convertimos cada RoutineExercise a ExerciseDto
@@ -24,10 +20,7 @@ public class RoutineConversor {
             routine.getCreator().getAvatar() != null ? routine.getCreator().getAvatar().getAvatarBase64() : null,
             routine.getDuration(),
             routine.getModificationDate(), 
-            routine.getIsPublic()
-        );
-
-        return routineDto;
+            routine.getIsPublic());
     }
 
     // Nuevo método para incluir info de "isFollowing" para un usuario concreto
@@ -54,14 +47,14 @@ public class RoutineConversor {
     }
 
     public static List<RoutineDto> toRoutineDtos(List<Routine> routines) {
-        return routines.stream().map(r -> toRoutineDto(r)).collect(Collectors.toList());
+        return routines.stream().map(r -> toRoutineDto(r)).toList();
     }
 
     // Lista de RoutineDto con isFollowing
     public static List<RoutineDto> toRoutineDtos(List<Routine> routines, Long currentUserId, RoutineFollowDao routineFollowDao) {
         return routines.stream()
                 .map(r -> toRoutineDto(r, currentUserId, routineFollowDao))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static TrainingDetailsDto toTrainingDetailsDto(Training training, List<ExerciseRoutineDto> exercises, Routine routine) {
@@ -90,7 +83,7 @@ public class RoutineConversor {
     public static CalendarStatsDto toCalendarStatsDto(List<Training> trainings) {
         List<CalendarTrainingDto> trainingDtos = trainings.stream()
                 .map(RoutineConversor::toCalendarStatDto)
-                .collect(Collectors.toList());
+                .toList();
         return new CalendarStatsDto(trainingDtos);
     }
 }
